# radcloud

./: .gitignore  README.md  pyproject.toml  unzip_datasets.sh
CPSL_Radar/: Analyzer.py  trainer.py
CPSL_Radar/data_processors/: Radar_Data_Processor.py
CPSL_Radar/datasets/: Dataset_Generator.py  Segmentation_Dataset.py
CPSL_Radar/losses/: BCE_dice_loss.py  focal_loss.py
CPSL_Radar/models/: unet.py
Notebooks/: generate_dataset.ipynb  get_num_params.ipynb  train_model.ipynb  view_results.ipynb  view_results_radar_only.ipynb
RadCloud/: Analyzer.py  trainer.py
RadCloud/data_processors/: Lidar_Data_Processor.py
RadCloud/datasets/: Dataset_Generator.py
RadCloud/losses/: BCE_dice_loss.py  dice_loss.py
radcloud/: Analyzer.py  trainer.py
radcloud/datasets/: Dataset_Generator.py
radcloud/losses/: BCE_dice_loss.py
radcloud/transforms/: random_radar_noise.py
scripts/: .gitignore  generate_dataset.py  generate_dataset_radar_only.py  generate_movie.py  generate_movie_radar_only.py  train_model.py
working_dir/: .gitignore
