[tool.poetry]
name = "radcloud"
version = "0.1.0"
description = "RadCloud Project"
authors = ["David Hunt <david.hunt@duke.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
imutils = "^0.5.4"
natsort = "^8.4.0"
albumentations = "^1.3.1"
numpy = "^1.26.3"
scipy = "^1.9"
opencv-python = "^4.9.0.80"
tqdm = "^4"
scikit-learn = "^1.1"
imageio = {extras = ["ffmpeg"], version = "^2.31.1"}
matplotlib = "^3.7"
pandas = "^2.0"
open3d = "^0.18.0"
addict = "^2.4.0"

[tool.poetry.dev-dependencies]
gdown = "^4.6.4"
ipywidgets = "^8.0"
jupyter = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-cov = "^4"
bandit = "^1.7"
black = "~22.12.0"
mypy = "^0"
isort = "^5.11"
flake8 = "^5.0"
snakeviz="^2.1.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"